Fixed a sizing problem on mobile

--- a/src/pages/login/Login.css
+++ b/src/pages/login/Login.css
@@ -58,7 +58,6 @@ p {
 		width: min-content;
 		height: 100%;
 		transform: translate(-20%, 30%);
-		position: absolute;
 		resize: inherit;
 	}
 }
